--- a/Base/package.json
+++ b/Base/package.json
@@ -8,14 +8,23 @@
   "scripts": {
     "copy:files": "copyfiles -u 1 src/**/*.css src/**/*.svg lib/",
     "build": "rimraf lib/* && npm run copy:files && tsc -p .",
-    "build:watch": "npm run build -- --watch"
+    "build:watch": "npm run build -- --watch",
+    "dev": "webpack-dev-server --config ./examples/webpack.config.js"
   },
   "devDependencies": {
     "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
     "copyfiles": "^2.4.1",
     "react-icons": "^4.3.1",
     "typescript": "^4.5.3",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.6.0",
+    "clean-webpack-plugin": "^1.0.0",
+    "css-loader": "^6.5.1",
+    "html-webpack-plugin": "^5.5.0",
+    "ts-loader": "^9.2.6"
   },
 
   "peerDependencies": {
