--- a/Base/package.json
+++ b/Base/package.json
@@ -14,25 +14,28 @@
   "devDependencies": {
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
-    "copyfiles": "^2.4.1",
-    "react-icons": "^4.3.1",
-    "typescript": "^4.5.3",
-    "rimraf": "^3.0.2",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0",
+    "@types/react-input-mask": "^3.0.1",
     "clean-webpack-plugin": "^1.0.0",
+    "copyfiles": "^2.4.1",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
-    "ts-loader": "^9.2.6"
+    "react-icons": "^4.3.1",
+    "react-input-mask": "^2.0.4",
+    "rimraf": "^3.0.2",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.3",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.6.0"
   },
-
   "peerDependencies": {
     "react": ">=17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-input-mask": "^2.0.4",
     "typescript": ">=4.5.3"
   },
-
-  "files": [ "/lib" ]
+  "files": [
+    "/lib"
+  ]
 }
