--- a/Base/package.json
+++ b/Base/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.3.1",
     "react-input-mask": "^2.0.4",
     "rimraf": "^3.0.2",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.3",
     "webpack": "^5.65.0",
